--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Taverna Stream",
   "short_name": "Taverna",
   "description": "Assista aos melhores filmes, séries e animes online. Plataforma de streaming com conteúdo de alta qualidade.",
-  "start_url": "/",
+  "start_url": "tavernastream.onrender.com",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#dc2626",
@@ -22,29 +22,48 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["entertainment", "video"],
-  "screenshots": [],
+  "categories": [
+    "entertainment",
+    "video"
+  ],
   "shortcuts": [
     {
       "name": "Início",
       "short_name": "Início",
       "description": "Ir para página inicial",
       "url": "/",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
       "name": "Navegar",
       "short_name": "Navegar",
       "description": "Explorar catálogo",
       "url": "/browse",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
       "name": "Minha Lista",
       "short_name": "Lista",
       "description": "Ver minha lista",
       "url": "/mylist",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
-  ]
+  ],
+  "dir": "auto",
+  "lang": "pt"
 }
